feat: agent event listeners, attachable to a factory or a harness
The one narrator becomes AgentEventListener, in the api: on(type, id, event),
none(), a builder -- AgentEventListener.of(c -> c.agentType(..).onTurnEnded(..))
-- and async(), which tells a listener on a virtual thread per event. A factory
takes any number engine-wide (attachable after the fact, so a container can
find its listeners once everything exists); a harness appends its own. The
engine keeps a Narrator to talk to, which now tells every listener in order on
one virtual thread per harness, off the fold's thread, isolating each. A new
AgentEvent.TurnEnded is announced however a turn ended.

The head summariser is the first consumer: it provides a listener, filtered to
its type and async, that hears every turn end and summarises under the lease.
The sweep, its auto-configuration and the engine's listing of agents are gone.
The starter attaches every listener bean engine-wide; console, watchman,
Odyssey and chat-web are listeners now.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01XPCoNFwvuXNJHYszggo2cd